force-app/main/default/objects/outfunds__Disbursement__c/fields/Awarded__c.field-meta.xml
<CustomField>
    <fullName>Awarded__c</fullName>
    <label>Awarded</label>
    <summarizedField>Budget_Line__c.Awarded__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>