force-app/main/default/objects/outfunds__Disbursement__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <summarizedField>Budget_Line__c.Change__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>