force-app/main/default/objects/outfunds__Disbursement__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <summarizedField>Budget_Line__c.Plan__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>