force-app/main/default/objects/outfunds__Disbursement__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <label>Recommended</label>
    <summarizedField>Budget_Line__c.Recommended__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>