force-app/main/default/objects/outfunds__Disbursement__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <label>Spend</label>
    <summarizedField>Budget_Line__c.Spend__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>